results/print-rdt/expected/failure/parser/unopened_brace.psy.out
 primary -> BOOL_CONSTANT
 call_access -> primary
 unary -> call_access
 factor -> unary
 term -> factor
 shift -> term
 comparison -> shift
 equality -> comparison
 bitwise_and -> equality
 bitwise_xor -> bitwise_and
 bitwise_or -> bitwise_xor
 logic_and -> bitwise_or
 logic_or -> logic_and
 ternary -> logic_or
 assignment -> ternary
 expression -> assignment
error: syntax error, unexpected var
  --> tests/failure/parser/unopened_brace.psy:2:8
   |
  2|     var list[3] ls = [1, 2, 3];
   |       ^--- Here

